@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+3/28/14
+    - Enhanced extract_islands() to handle DC lines, custom fields
+      and extraction of multiple islands into a single case struct.
+
 3/11/14
     - Fixed bugs in runpf() related to enforcing generator reactive
       power limits when all generators violate limits or when
